--- a/package.json
+++ b/package.json
@@ -6,14 +6,32 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron ./out/electron/index.js",
-    "build": "tsc && Copy .\\src\\website\\index.html  .\\out\\website\\index.html",
-    "build:watch":"npm run build -- --watch"
+    "build": "webpack --config webpack.website.config.js --config webpack.electron.config.js",
+    "build:watch": "npm run build -- --watch"
   },
   "author": "",
   "license": "ISC",
   "private": true,
   "devDependencies": {
+    "@types/react": "^18.2.29",
+    "@types/react-dom": "^18.2.14",
+    "autoprefixer": "^10.4.16",
+    "css-loader": "^6.8.1",
     "electron": "^27.0.0",
-    "typescript": "^5.2.2"
+    "postcss-loader": "^7.3.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
+    "ts-loader": "^9.5.0",
+    "typescript": "^5.2.2",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "honeycomb-web-toolkit": "github:red-gate/honeycomb-web-toolkit",
+    "html-webpack-plugin": "^5.5.3",
+    "sass": "^1.69.4"
   }
 }
